--- a/help.html
+++ b/help.html
@@ -67,18 +67,9 @@
     <div class="buttonDivs">
       <a id="button2" class="btn btn-default" href="AboutUs.html">
         <img id="picFAQ" src="images/contactUs.jpg" a>
-        <p>Contact Us</p>
+        <p>About Us</p>
       </a>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
   </div>
 
 
