--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <div id="footer">
     <p>2021 BESTRIDE INC. &copy; Copyright Team 13. All right reserved.</p>
-  </div> -->
+  </div>
 
   <!----------------------------------------------->
   <!-- JS: Boostrap, Firebase, API related    -->
