--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/formcopygreenr.css">
+    <link rel="stylesheet" href="styles/formcopygreeny.css">
 
 
 
@@ -69,10 +69,9 @@
             </ul>
         </div>
     </nav>
+</br>
+</br>
 
-    <div id="header">
-        <h1></h1>
-    </div>
 
     <div id="map"></div>
     <div id="elements">
@@ -86,7 +85,7 @@
     <div class="d-grid gap-2 col-6 mx-auto">
         <input type="text" id="dist">
         <input type="text" id="dura">
-        <a id="submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">Get
+        <a id="submission" class="btn btn-dark btn-xl" onclick="getEstimate()" role="button" type="submit"><i class="fa fa-search" aria-hidden="true"></i>Get
             Estimate</a>
         <br>
 
