--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <!-- Css files linked-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/navbar.css">
-    <link rel="stylesheet" href="styles/formcopygreenr.css">
+    <link rel="stylesheet" href="styles/formcopygreeny.css">
 
 
 
@@ -83,7 +83,8 @@
         <input type="text" id="dist">
         <input type="text" id="dura">
         <!-- The Get Estimate button that will take the user to the next page and start up the getEstimate function-->
-        <a id="submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">Get
+        <a id="submission" class="btn btn-outline-dark btn-xl" onclick="getEstimate()" role="button" type="submit">
+            <i class="fa fa-search" aria-hidden="true"></i>Get
             Estimate</a>
         <br>
 
