revert back before merge

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Header Navigation Bar -->
 
   <nav class="navbar">
-    <a class="brand-title" href="formcopy2.html">BESTRIDE</a>
+    <a class="brand-title" href="main.html">BESTRIDE</a>
     <a href="#" class="toggle-button">
       <span class="bar"></span>
       <span class="bar"></span>
@@ -41,7 +41,7 @@
             class="" href="profile.html">USER
             PROFILE</a></li>
         <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
-            href="formcopy2.html">COMPARE
+            href="main.html">COMPARE
             PRICES</a></li>
         <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active" href="help.html">HELP</a>
         </li>
