--- a/FAQs.html
+++ b/FAQs.html
@@ -39,7 +39,7 @@
                         class="" href="profile.html">USER
                         PROFILE</a></li>
                 <li style="display:none;" class="logged-in"><i class="fa fa-bar-chart" aria-hidden="true"></i><a
-                        class="" href="formcopy2.html">COMPARE
+                        class="" href="main.html">COMPARE
                         PRICES</a></li>
                 <li><i class="fa fa-question-circle" aria-hidden="true"></i><a class="navbar-active"
                         href="help.html">HELP</a>
