documented some .css files.  Linked RideShare companies to the Get App Button.

--- a/FAQs.html
+++ b/FAQs.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <!-- HelpPage starts here -->
+    <!-- FAQs page starts here -->
     <div class="wrapper">
         <div id="subHead">
             <div class="reenter">
