--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My BCIT Project</title>
+  <title>About Us Page</title>
   <meta name="comp1800 boilerplate code" content="my bcit project">
   <meta name="author" content="BCIT">
 
@@ -64,7 +64,7 @@
   <!-- HelpPage starts here -->
 
   <header>
-    <h1>About Us</h1>
+    <h1></h1>
   </header>
   <div id="mainContent">
   <div id="mission">
@@ -117,6 +117,7 @@
     <p><i>Mailing address:</i> &nbsp &nbsp &nbsp &nbsp &nbsp 8357 Best St, V8J2K9, Vancouver, BC, Canada</p>
   </div>
 </div>
+</br></br>
 </div>
 
 
