--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
   <meta name="author" content="BCIT">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>BestRide App Team 13</title>
+  <title>Profile Page</title>
 
   <!-- Bootstrap for Mobile-first, and JQuery -->
 
