--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Results Page</title>
 
   <!-- Bootstrap for Mobile-first, and JQuery -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -319,8 +319,6 @@
   </div>
 
   <!-- Code for the main Contents of the page -->
-
-
   <div class="contain2">
     <div id="list">
       <div class="listOpt comp1">
@@ -329,7 +327,7 @@
         <p id="type1"></p>
         <p>Price: $<span id="uberPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#uberModal"> Reviews </a>
-          <button class = "end-button" href="/uber.com">Get App</button></div>
+          <a href="https://www.uber.com/ca/en/"><button class = "end-button">Get App</button></a></div>
       </div>
       <div class="listOpt comp2">
         <div id = "lyft-color">LYFT</div>
@@ -337,7 +335,7 @@
         <p id="type2"></p>
         <p>Price: $<span id="lyftPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#lyftModal"> Reviews </a>
-          <button class = "end-button" href="/lyft.com">Get App</button></div>
+          <a href="https://www.lyft.com/"><button class = "end-button">Get App</button></a></div>
       </div>
       <div class="listOpt comp3">
         <div id = "evo-color">EVO</div>
@@ -345,7 +343,7 @@
         <p id="type3"></p>
         <p>Price: $<span id="evoPrice"></span></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#evoModal"> Reviews </a>
-          <button class = "end-button" href="/evo.com">Get App</button></div>
+          <a href="https://evo.ca/"><button class = "end-button">Get App</button></a></div>
       </div>
       <div class="listOpt comp4">
         <div id = "modo-color">MODO</div>
@@ -353,7 +351,7 @@
         <p id="type4"></p>
         <p>Price: $<span id="modoPrice"></p>
         <div class = "end-links"><a href="#" data-bs-toggle="modal" data-bs-target="#modoModal"> Reviews </a>
-          <button class = "end-button" href="/modo.com">Get App</button></div>
+          <a href="https://www.modo.com"><button class = "end-button" >Get App</button></a></div>
       </div>
     </div>
   </div>
