--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
     <div class="navbar-links">
       <ul>
         <li style="display:none;" class="logged-out"><span><i class="fa fa-user" aria-hidden="true"></i></span><a
-            class="" href="main.html">USER
+            class="" href="profile.html">USER
             PROFILE</a></li>
         <li style="display:none;" class="logged-out"><i class="fa fa-bar-chart" aria-hidden="true"></i><a class=""
             href="main.html">COMPARE
