--- a/main.html
+++ b/main.html
@@ -60,10 +60,10 @@
                         class="navbar-active" href="login.html">LOGIN</a></li>
                 <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
                         class="navbar-active">LOGGED IN AS <span id="username"></span></a></li>
-                <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
+                <li clastyle="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
                         class="navbar-active" href="login.html">SIGNUP</a>
                 </li>
-                <li id="btnLogout" style="display:none;" class="logged-in" id="btnLogout"><i class="fa fa-sign-out"
+                <li id="btnLogout" style="display:none;" class="logged-in"><i class="fa fa-sign-out"
                         aria-hidden="true"></i><a class="navbar-active">LOGOUT</a>
                 </li>
             </ul>
