changed readme file

--- a/results.html
+++ b/results.html
@@ -13,8 +13,8 @@
     integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/navbar.css">
-  <link rel="stylesheet" href="styles/list.css">
-  <link rel="stylesheet" href="styles/listReviews.css">
+  <link rel="stylesheet" href="styles/results.css">
+  <link rel="stylesheet" href="styles/reviews.css">
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
   <script src="https://kit.fontawesome.com/f9fc02e319.js" crossorigin="anonymous"></script>
 
@@ -380,7 +380,7 @@
   <!-- JS files: Your own JavaScript functions included here    -->
   <!--------------------------------------------------------------------->
   <script src="scripts/navbar.js"></script>
-  <script src="scripts/list.js"></script>
+  <script src="scripts/results.js"></script>
   <script src="scripts/uberReviews.js"></script>
   <script src="scripts/lyftReviews.js"></script>
   <script src="scripts/evoReviews.js"></script>
