--- a/results.html
+++ b/results.html
@@ -50,7 +50,7 @@
         <li style="display:none;" class="logged-out"><i class="fa fa-sign-in" aria-hidden="true"></i><a
             class="navbar-active" href="login.html">LOGIN</a></li>
         <li style="display:none;" class="logged-in"><i class="fa fa-sign-in" aria-hidden="true"></i><a
-            class="navbar-active"><span id="username"></span></a></li>
+            class="navbar-active">LOGGED IN AS <span id="username"></span></a></li>
         <li style="display:none;" class="logged-out"><i class="fa fa-user-plus" aria-hidden="true"></i><a
             class="navbar-active" href="login.html">SIGNUP</a>
         </li>
